# tidetrawler

./: Cargo.toml
src/: cache.rs  lib.rs  main.rs  request.rs
src/repo/: crates.rs  mod.rs  npm.rs  prelude.rs  pypi.rs
src/tests/: mod.rs  test_npm.rs  test_pypi.rs
src/tests/data/: npm-search-api.json  pypi-requests.json
